2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor.  Rename `token` class's member
	function `is_character()` to `is_any_character()` to try and get
	across the idea that it's true for _any_ sort of character:
	ordinary {`A`}, special {`\[em]`, `\C'em'`}, or indexed
	{`\N'45'`}.

	* src/roff/troff/token.h (class token): Update declaration.
	(token::is_any_character): Update (inline) definition.
	* src/roff/troff/input.cpp (print_character_request)
	(remove_character):
	* src/roff/troff/node.cpp (embolden_font): Update call sites.

2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/reg.cpp (dump_register): Add assertion.

2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/reg.cpp (define_register_request)
	(assign_register_format_request, remove_register_request)
	(alias_register_request, rename_register_request)
	(print_register_request): Mark functions `static` since they do
	not require external linkage.

2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (are_comparands_equal): Fix code
	style nit; parenthesize formally complex expression.

2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_request): Adjust wording of
	warning diagnostic to better describe what the `do` request
	actually does.

2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_zero_width_output): Adjust
	wording of warning diagnostic to describe the escape sequence
	consistently with other messages.

2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_overstrike, do_bracket)
	(token::next): Convert some recent assertions to error
	diagnostics, since inputs to provoke them are not impossible.
	I found these by attempting to format GNU troff's own ELF
	executable as a document (the laziest possible fuzz testing).
